build_final_verify_v4.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:configureCMakeDebug[arm64-v8a]

> Task :app:buildCMakeDebug[arm64-v8a]
C/C++: ninja: Entering directory `/Users/danielmiller/Documents/Code Projects/ancient-halley/app/.cxx/Debug/c57145c4/arm64-v8a'
C/C++: /Users/danielmiller/Library/Android/sdk/ndk/27.0.12077973/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=aarch64-none-linux-android26 --sysroot=/Users/danielmiller/Library/Android/sdk/ndk/27.0.12077973/toolchains/llvm/prebuilt/darwin-x86_64/sysroot -Dnative_lib_EXPORTS -isystem /Users/danielmiller/.gradle/caches/8.13/transforms/a0de23ce9aa0dadb88065bbd5f98db59/transformed/oboe-1.9.0/prefab/modules/oboe/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -std=c++17 -O3 -ffast-math -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native-lib.dir/AudioEngine.cpp.o -MF CMakeFiles/native-lib.dir/AudioEngine.cpp.o.d -o CMakeFiles/native-lib.dir/AudioEngine.cpp.o -c '/Users/danielmiller/Documents/Code Projects/ancient-halley/app/src/main/cpp/AudioEngine.cpp'
C/C++: /Users/danielmiller/Documents/Code Projects/ancient-halley/app/src/main/cpp/AudioEngine.cpp:809:46: error: 'isActive' is a private member of 'SamplerEngine'
C/C++:   809 |           engineActive = track.samplerEngine.isActive();
C/C++:       |                                              ^
C/C++: /Users/danielmiller/Documents/Code Projects/ancient-halley/app/src/main/cpp/engines/SamplerEngine.h:393:8: note: declared private here
C/C++:   393 |   bool isActive() const { return mIsActive; }
C/C++:       |        ^
C/C++: 1 error generated.

> Task :app:buildCMakeDebug[arm64-v8a] FAILED

> Task :app:compileDebugKotlin
e: file:///Users/danielmiller/Documents/Code%20Projects/ancient-halley/app/src/main/java/com/groovebox/MainActivity.kt:1449:35 Unresolved reference: isRecordingSample
e: file:///Users/danielmiller/Documents/Code%20Projects/ancient-halley/app/src/main/java/com/groovebox/MainActivity.kt:1449:62 Unresolved reference: recordingTrackIndex
e: file:///Users/danielmiller/Documents/Code%20Projects/ancient-halley/app/src/main/java/com/groovebox/MainActivity.kt:1455:15 Unresolved reference: isActive
e: file:///Users/danielmiller/Documents/Code%20Projects/ancient-halley/app/src/main/java/com/groovebox/MainActivity.kt:1477:103 Cannot find a parameter with this name: isRecordingSample
e: file:///Users/danielmiller/Documents/Code%20Projects/ancient-halley/app/src/main/java/com/groovebox/MainActivity.kt:1477:129 Cannot find a parameter with this name: recordingTrackIndex
e: file:///Users/danielmiller/Documents/Code%20Projects/ancient-halley/app/src/main/java/com/groovebox/MainActivity.kt:1480:42 Cannot find a parameter with this name: isRecordingSample
e: file:///Users/danielmiller/Documents/Code%20Projects/ancient-halley/app/src/main/java/com/groovebox/MainActivity.kt:1480:69 Cannot find a parameter with this name: recordingTrackIndex

> Task :app:compileDebugKotlin FAILED

[Incubating] Problems report is available at: file:///Users/danielmiller/Documents/Code%20Projects/ancient-halley/build/reports/problems/problems-report.html

FAILURE: Build completed with 2 failures.

1: Task failed with an exception.
-----------
* What went wrong:
Execution failed for task ':app:buildCMakeDebug[arm64-v8a]'.
> com.android.ide.common.process.ProcessException: ninja: Entering directory `/Users/danielmiller/Documents/Code Projects/ancient-halley/app/.cxx/Debug/c57145c4/arm64-v8a'
  [1/3] Building CXX object CMakeFiles/native-lib.dir/AudioEngine.cpp.o
  FAILED: CMakeFiles/native-lib.dir/AudioEngine.cpp.o 
  /Users/danielmiller/Library/Android/sdk/ndk/27.0.12077973/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=aarch64-none-linux-android26 --sysroot=/Users/danielmiller/Library/Android/sdk/ndk/27.0.12077973/toolchains/llvm/prebuilt/darwin-x86_64/sysroot -Dnative_lib_EXPORTS -isystem /Users/danielmiller/.gradle/caches/8.13/transforms/a0de23ce9aa0dadb88065bbd5f98db59/transformed/oboe-1.9.0/prefab/modules/oboe/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -std=c++17 -O3 -ffast-math -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native-lib.dir/AudioEngine.cpp.o -MF CMakeFiles/native-lib.dir/AudioEngine.cpp.o.d -o CMakeFiles/native-lib.dir/AudioEngine.cpp.o -c '/Users/danielmiller/Documents/Code Projects/ancient-halley/app/src/main/cpp/AudioEngine.cpp'
  /Users/danielmiller/Documents/Code Projects/ancient-halley/app/src/main/cpp/AudioEngine.cpp:809:46: error: 'isActive' is a private member of 'SamplerEngine'
    809 |           engineActive = track.samplerEngine.isActive();
        |                                              ^
  /Users/danielmiller/Documents/Code Projects/ancient-halley/app/src/main/cpp/engines/SamplerEngine.h:393:8: note: declared private here
    393 |   bool isActive() const { return mIsActive; }
        |        ^
  1 error generated.
  [2/3] Building CXX object CMakeFiles/native-lib.dir/native-lib.cpp.o
  ninja: build stopped: subcommand failed.
  
  C++ build system [build] failed while executing:
      /Users/danielmiller/Library/Android/sdk/cmake/3.22.1/bin/ninja \
        -C \
        "/Users/danielmiller/Documents/Code Projects/ancient-halley/app/.cxx/Debug/c57145c4/arm64-v8a" \
        native-lib
    from /Users/danielmiller/Documents/Code Projects/ancient-halley/app

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.
==============================================================================

2: Task failed with an exception.
-----------
* What went wrong:
Execution failed for task ':app:compileDebugKotlin'.
> A failure occurred while executing org.jetbrains.kotlin.compilerRunner.GradleCompilerRunnerWithWorkers$GradleKotlinCompilerWorkAction
   > Compilation error. See log for more details

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.
==============================================================================

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 21s
26 actionable tasks: 3 executed, 23 up-to-date
